<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar_settings"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/settings" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <View
            android:id="@+id/support_line_first"
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar_settings" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/set_bitrate"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/support_line_first" />

        <RadioGroup
            android:id="@+id/rg_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bitrate"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/tv_bitrate">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_320"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/_320"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_256"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/_256"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_192"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/_192"
                android:textSize="12sp" />

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_audio_file_format"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_bitrate" />

        <RadioGroup
            android:id="@+id/rg_format"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_format"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/tv_format">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_mp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/mp3"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_mp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/mp4"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_aac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/aac"
                android:textSize="12sp" />

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_theme"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_format" />

        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_theme"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/tv_theme">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/auto"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/night"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/day"
                android:textSize="12sp" />

        </RadioGroup>

        <View
            android:id="@+id/support_line_second"
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_theme" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rate_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/rate_app"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_rate"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/support_line_second" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/open_source"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_library"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_app" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_apps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/other_applications"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_apps"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_open_source" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_privacy"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_apps" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>